added search table

--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -42,3 +42,9 @@
 	background-color: #e5e5e5;
 	color: #9f9f9f;
 }
+.vertical-center {
+	min-height: 100%; /* Fallback for browsers do NOT support vh unit */
+	min-height: 100vh; /* These two lines are counted as one :-)       */
+	display: flex;
+	align-items: center;
+}
